--- a/Precily.ipynb
+++ b/Precily.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "17cFhn5-8nIdGIwnaLSUPSALzpTGpLUk4",
-      "authorship_tag": "ABX9TyMiFCgQqZPpBPr6rvws/xrT",
+      "authorship_tag": "ABX9TyObLa3lqTHOY3c2FswrJGVH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,37 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Seung-heon-Baek/Precily/blob/main/Precily.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/SmritiChawla/Precily.git"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "9ko5VDMgstOI",
+        "outputId": "50006ffb-445a-4f9c-ab6b-95674687213d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'Precily'...\n",
+            "remote: Enumerating objects: 1243, done.\u001b[K\n",
+            "remote: Counting objects: 100% (93/93), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (60/60), done.\u001b[K\n",
+            "remote: Total 1243 (delta 32), reused 89 (delta 30), pack-reused 1150 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (1243/1243), 1.68 GiB | 28.04 MiB/s, done.\n",
+            "Resolving deltas: 100% (540/540), done.\n",
+            "Updating files: 100% (259/259), done.\n"
+          ]
+        }
       ]
     },
     {
@@ -143,7 +174,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ujGB0YAGoOQk",
-        "outputId": "524588c0-b40e-46ab-ea41-173843c494ca"
+        "outputId": "524588c0-b40e-46ab-ea41-173843c494ca",
+        "collapsed": true
       },
       "execution_count": 4,
       "outputs": [
@@ -216,30 +248,51 @@
     {
       "cell_type": "code",
       "source": [
-        "model1 = load_model_hdf5(\"Model1.hdf5\")"
+        "model1 = load_model(\"/content/Precily/Fig1/Fig1d/Model1.hdf5\")\n",
+        "model2 = load_model(\"/content/Precily/Fig1/Fig1d/Model2.hdf5\")\n",
+        "model3 = load_model(\"/content/Precily/Fig1/Fig1d/Model3.hdf5\")\n",
+        "model4 = load_model(\"/content/Precily/Fig1/Fig1d/Model4.hdf5\")\n",
+        "model5 = load_model(\"/content/Precily/Fig1/Fig1d/Model5.hdf5\")"
       ],
       "metadata": {
         "id": "JoEgTqbsoTaB",
-        "outputId": "410cc613-ac09-4fb5-9e5b-239f4a26eb79",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 145
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3320ca8f-8fe4-4cfc-a1a0-7531b957ecdc"
       },
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'load_model_hdf5' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-4444038ac712>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_model_hdf5\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Model1.hdf5\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'load_model_hdf5' is not defined"
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/keras/src/layers/core/dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n",
+            "/usr/local/lib/python3.10/dist-packages/keras/src/optimizers/base_optimizer.py:33: UserWarning: Argument `decay` is no longer supported and will be ignored.\n",
+            "  warnings.warn(\n",
+            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
+            "WARNING:absl:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
+            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
+            "WARNING:absl:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
+            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
+            "WARNING:absl:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
+            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
+            "WARNING:absl:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
+            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
+            "WARNING:absl:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "sCvNvR8csezA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
