--- a/Precily.ipynb
+++ b/Precily.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "17cFhn5-8nIdGIwnaLSUPSALzpTGpLUk4",
-      "authorship_tag": "ABX9TyObLa3lqTHOY3c2FswrJGVH",
+      "authorship_tag": "ABX9TyNupfHGXvUtcpe2+iWNBGq2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,11 +34,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "9ko5VDMgstOI",
-        "outputId": "50006ffb-445a-4f9c-ab6b-95674687213d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9ko5VDMgstOI",
+        "outputId": "50006ffb-445a-4f9c-ab6b-95674687213d"
       },
       "execution_count": 9,
       "outputs": [
@@ -248,48 +248,61 @@
     {
       "cell_type": "code",
       "source": [
-        "model1 = load_model(\"/content/Precily/Fig1/Fig1d/Model1.hdf5\")\n",
-        "model2 = load_model(\"/content/Precily/Fig1/Fig1d/Model2.hdf5\")\n",
-        "model3 = load_model(\"/content/Precily/Fig1/Fig1d/Model3.hdf5\")\n",
-        "model4 = load_model(\"/content/Precily/Fig1/Fig1d/Model4.hdf5\")\n",
-        "model5 = load_model(\"/content/Precily/Fig1/Fig1d/Model5.hdf5\")"
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import keras_tuner as kt\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras"
       ],
       "metadata": {
         "id": "JoEgTqbsoTaB",
+        "collapsed": true
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install -q -U keras-tuner\n"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3320ca8f-8fe4-4cfc-a1a0-7531b957ecdc"
+        "id": "sCvNvR8csezA",
+        "outputId": "65543af0-29f6-4965-dd7f-3b1815b84125"
       },
-      "execution_count": 11,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
+          "name": "stdout",
           "text": [
-            "/usr/local/lib/python3.10/dist-packages/keras/src/layers/core/dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n",
-            "/usr/local/lib/python3.10/dist-packages/keras/src/optimizers/base_optimizer.py:33: UserWarning: Argument `decay` is no longer supported and will be ignored.\n",
-            "  warnings.warn(\n",
-            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
-            "WARNING:absl:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
-            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
-            "WARNING:absl:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
-            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
-            "WARNING:absl:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
-            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
-            "WARNING:absl:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
-            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n",
-            "WARNING:absl:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n"
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/129.1 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━\u001b[0m \u001b[32m122.9/129.1 kB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.1/129.1 kB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "np.random.seed(2)\n"
+      ],
       "metadata": {
-        "id": "sCvNvR8csezA"
+        "id": "0jwbTy8XvKpF"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_set = pd.read_csv('Training_data.csv')"
+      ],
+      "metadata": {
+        "id": "SzvaCLBtwFYk"
       },
       "execution_count": null,
       "outputs": []
