--- a/Precily.ipynb
+++ b/Precily.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/Seung-heon-Baek/Precily/blob/main/Precily.ipynb",
-      "authorship_tag": "ABX9TyOAltIXccg2L9GEgOJp/Flv",
+      "authorship_tag": "ABX9TyO07At7i6JTjumOWU50X2sL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5403,6 +5403,32 @@
     {
       "cell_type": "code",
       "source": [
+        "len(drugs)"
+      ],
+      "metadata": {
+        "id": "UYahp75F5fIh",
+        "outputId": "cb290388-6e05-4ff2-86a6-befe5b98ba79",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "171"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "correlation = {}\n"
       ],
       "metadata": {
@@ -5422,11 +5448,11 @@
         ""
       ],
       "metadata": {
-        "id": "U3ySJF7Jzfsz",
-        "outputId": "a2b8e67d-e15d-4762-d617-5a46177df3c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U3ySJF7Jzfsz",
+        "outputId": "a2b8e67d-e15d-4762-d617-5a46177df3c4"
       },
       "execution_count": 17,
       "outputs": [
@@ -5473,11 +5499,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "OS0DKZEJ2zwV",
-        "outputId": "6bcf3af0-a38f-48a8-9e26-3d7649b777e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OS0DKZEJ2zwV",
+        "outputId": "6bcf3af0-a38f-48a8-9e26-3d7649b777e2"
       },
       "execution_count": 19,
       "outputs": [
@@ -6351,11 +6377,11 @@
         "print(correlation)\n"
       ],
       "metadata": {
-        "id": "n77YB7iN39DI",
-        "outputId": "0d6ed51d-140f-4283-ecf4-0455d210c5a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "n77YB7iN39DI",
+        "outputId": "0d6ed51d-140f-4283-ecf4-0455d210c5a3"
       },
       "execution_count": 20,
       "outputs": [
@@ -6385,11 +6411,11 @@
         "print(cor)"
       ],
       "metadata": {
-        "id": "QHnlXIxW4SH2",
-        "outputId": "651a0df1-17db-4826-bc74-f77300655578",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QHnlXIxW4SH2",
+        "outputId": "651a0df1-17db-4826-bc74-f77300655578"
       },
       "execution_count": 22,
       "outputs": [
@@ -6417,9 +6443,33 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "mean_correlation = cor['Correlation'].mean()\n",
+        "print(mean_correlation)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GaoMYmbj4VQ4",
+        "outputId": "fda65897-4b7e-4430-bc62-c68a3ded0a1f"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.48211909270526604\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "GaoMYmbj4VQ4"
+        "id": "BKGunvnJ59xf"
       },
       "execution_count": null,
       "outputs": []
