--- a/Precily.ipynb
+++ b/Precily.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/Seung-heon-Baek/Precily/blob/main/Precily.ipynb",
-      "authorship_tag": "ABX9TyO07At7i6JTjumOWU50X2sL",
+      "authorship_tag": "ABX9TyMIvGNdRX+HViBDrCeIBY/O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5290,8 +5290,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Precily/Fig1/Fig1c/Fig1c_Precily_pathways\n",
-        "/Fig1c.R 재구현\n"
+        "**Precily/Fig1/Fig1c/Fig1c_Precily_pathways**\n",
+        "**/Fig1c.R**"
       ],
       "metadata": {
         "id": "ph7_By8m4jro"
@@ -5406,11 +5406,11 @@
         "len(drugs)"
       ],
       "metadata": {
-        "id": "UYahp75F5fIh",
-        "outputId": "cb290388-6e05-4ff2-86a6-befe5b98ba79",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UYahp75F5fIh",
+        "outputId": "cb290388-6e05-4ff2-86a6-befe5b98ba79"
       },
       "execution_count": 23,
       "outputs": [
