--- a/Precily.ipynb
+++ b/Precily.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/Seung-heon-Baek/Precily/blob/main/Precily.ipynb",
-      "authorship_tag": "ABX9TyMIvGNdRX+HViBDrCeIBY/O",
+      "authorship_tag": "ABX9TyPVqXAPaBDpZsBe/pvA1SMR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "id": "9ko5VDMgstOI",
         "outputId": "9671f3f3-274d-4f78-c3ee-3dcf10f784ba"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,7 +71,7 @@
         "id": "a2GSSQjCqVXK",
         "outputId": "4f61e506-1b4d-4793-d9b9-cab0f0ab4e59"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +95,7 @@
         "id": "kgU5Rkk2qjQ2",
         "outputId": "53b7277e-7a25-4897-c527-89d8bff434bb"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -196,7 +196,7 @@
         "outputId": "1796bc39-9714-4614-c6b4-1bca825636fc",
         "collapsed": true
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +225,7 @@
         "outputId": "908499d9-d05b-4faa-87da-3223863a313a",
         "collapsed": true
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5244,7 +5244,7 @@
       "metadata": {
         "id": "jqUxPz5CsIhl"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5260,7 +5260,7 @@
         "id": "JoEgTqbsoTaB",
         "collapsed": true
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5275,7 +5275,7 @@
         "id": "sCvNvR8csezA",
         "outputId": "ab64be64-fb4e-455c-a4a2-f9fd4818d5b0"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5312,7 +5312,7 @@
         "id": "tLzJlUdbvqTs",
         "outputId": "4f7d6847-6045-45bd-ca5a-762bcc003faa"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5359,7 +5359,7 @@
         "id": "khypb9RUx7n_",
         "outputId": "50d31a42-5c14-41c1-c9dc-fc362b1509df"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5412,7 +5412,7 @@
         "id": "UYahp75F5fIh",
         "outputId": "cb290388-6e05-4ff2-86a6-befe5b98ba79"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5434,7 +5434,7 @@
       "metadata": {
         "id": "2iPRXsu-zdZw"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5444,8 +5444,7 @@
         "model2 = load_model(\"/content/Precily/Fig1/Fig1c/Fig1c_Precily_pathways/Model2.hdf5\")\n",
         "model3 = load_model(\"/content/Precily/Fig1/Fig1c/Fig1c_Precily_pathways/Model3.hdf5\")\n",
         "model4 = load_model(\"/content/Precily/Fig1/Fig1c/Fig1c_Precily_pathways/Model4.hdf5\")\n",
-        "model5 = load_model(\"/content/Precily/Fig1/Fig1c/Fig1c_Precily_pathways/Model5.hdf5\")\n",
-        ""
+        "model5 = load_model(\"/content/Precily/Fig1/Fig1c/Fig1c_Precily_pathways/Model5.hdf5\")\n"
       ],
       "metadata": {
         "colab": {
@@ -5454,7 +5453,7 @@
         "id": "U3ySJF7Jzfsz",
         "outputId": "a2b8e67d-e15d-4762-d617-5a46177df3c4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5505,7 +5504,7 @@
         "id": "OS0DKZEJ2zwV",
         "outputId": "6bcf3af0-a38f-48a8-9e26-3d7649b777e2"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6383,7 +6382,7 @@
         "id": "n77YB7iN39DI",
         "outputId": "0d6ed51d-140f-4283-ecf4-0455d210c5a3"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6402,7 +6401,7 @@
       "metadata": {
         "id": "vGKqBXa34Q4i"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6417,7 +6416,7 @@
         "id": "QHnlXIxW4SH2",
         "outputId": "651a0df1-17db-4826-bc74-f77300655578"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6454,7 +6453,7 @@
         "id": "GaoMYmbj4VQ4",
         "outputId": "fda65897-4b7e-4430-bc62-c68a3ded0a1f"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6467,9 +6466,120 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/hkmztrk/SMILESVecProteinRepresentation.git"
+      ],
+      "metadata": {
+        "id": "8IOOxtGCgF6i",
+        "outputId": "129e8563-8512-4c3d-9a03-1b721cebc832",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'SMILESVecProteinRepresentation'...\n",
+            "remote: Enumerating objects: 301, done.\u001b[K\n",
+            "remote: Counting objects: 100% (16/16), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (10/10), done.\u001b[K\n",
+            "remote: Total 301 (delta 5), reused 16 (delta 5), pack-reused 285 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (301/301), 15.93 MiB | 13.47 MiB/s, done.\n",
+            "Resolving deltas: 100% (161/161), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python getsmilesvec.py word-level.txt"
+      ],
+      "metadata": {
+        "id": "BKGunvnJ59xf",
+        "outputId": "257d87fe-a68e-484c-fea2-d645dd932ab4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Constructing SMILES vectors..\n",
+            "Done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pickle\n",
+        "\n",
+        "# 파일 경로 지정\n",
+        "file_path = \"/content/smiles.vec\"\n",
+        "\n",
+        "# pickle 파일 로드\n",
+        "with open(file_path, \"rb\") as f:\n",
+        "    smiles_data = pickle.load(f)\n",
+        "\n",
+        "print(\"smiles.vec 파일 로드 성공:\", smiles_data)"
+      ],
+      "metadata": {
+        "id": "WpVG6Fdwhqzr",
+        "outputId": "e4b3457d-923a-426f-eff8-7c3a4ce7a9df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "smiles.vec 파일 로드 성공: [[0.04122915838436201, 0.09176874451520967, 0.02295703693043168, -0.040028159302182315, -0.09778240204947751, 0.024170902625816625, 0.013085073473431715, 0.047316024034488494, -0.027265512906923528, 0.14039282682465343, -0.02562706091827372, -0.11572831614715297, -0.1555692079227145, 0.00670048817083603, 0.10398139091344868, 0.03693145129080044, 0.056566927036861094, -0.002702670929976171, -0.0006304511277959114, -0.05060470694812333, -0.029847561359042075, 0.006632427798538673, 0.02263565820346518, 0.009482598250232092, -0.016822671086141248, 0.19484625402383687, 0.09625787774055469, 0.054897719846538656, 0.02838018291243693, 0.07289359652687137, 0.08087703612882917, 0.04150431775828687, -0.14365209602728124, 0.02581467104382904, 0.03964827972941282, 0.004378549135630814, -0.002052317623321603, -0.035887902011958565, -0.06516334099876808, -0.07448630534657617, 0.017391072523712022, 0.025114048987899613, 0.014188658559649455, 0.03056528068306606, 0.06001981663540369, -0.07209441529178037, 0.041590256207599874, 0.10560657140776152, 0.026082671053633776, -0.0853060254963433, -0.00175539031624794, 0.00721908515182937, -0.09260134180871452, -0.01753093912401066, 0.019217207085159494, -0.055883865882983295, 0.06511051171436542, 0.03917888999439594, -0.019271304626472113, 0.0728128648749212, 0.12561035342514515, -0.010092854090943569, 0.05181223172240141, -0.013408695222673619, -0.022794060045626105, 0.09942338906410264, -0.07852213431104291, 0.05069630472670968, -0.0005635480203370495, 0.0765442075889285, 0.008325573215942557, 0.05480284116617063, -0.031049451291015964, 0.0034311467372789613, 0.009315390284627495, 0.0584556590311411, -0.04188486597523457, 0.10150501222872152, -0.044243145620495805, 0.02390575645173468, 0.07662991656944519, 0.05536971988565311, 0.047733598547737774, -0.01110770770280463, 0.05091097528432927, -0.04562618288143379, -0.062245963675128975, 0.010086914501720813, 0.02739629308443244, -0.07741446372848458, -0.06880318237150587, 0.08875048891981928, 0.07977404981488134, 0.05316193801600758, 0.045454255736819126, 0.05031462242009073, -0.0586777314907167, -0.029868208076350572, 0.05131330527365208, 0.030571841748385894], [0.03667637120252625, 0.021991435348266555, -0.009277821548523442, -0.028276677093198224, -0.05158996728489235, 0.03481325773041575, 0.057673919930933945, -0.0070727745581778785, -0.06346974313829935, 0.08551469397160315, 0.01925596848295461, 0.01614296748753517, -0.007917064812875563, 0.11389704841759897, 0.05154854848590349, 0.012758999822601196, 0.09661522555735803, 0.023111516189190648, -0.0020845639369180126, -0.03771057980315339, 0.037581919962840694, 0.03716303214370724, 0.02961741958654696, -0.014042258502975587, -0.027785226222007506, 0.05372675886798289, 0.05900230619215196, 0.11534082168532957, 0.026927079855194016, 0.019857370204502536, 0.04377398447644326, 0.05562659609507049, -0.025056548777126497, 0.08373493653151297, 0.015569387123950066, -0.020646483667435184, -0.016993564718793475, -0.018050757627333363, 0.03709038629406883, 0.01409332288969909, -0.0207923716234584, 0.05993456393480301, -0.046482677691646164, 0.038512178246052034, 0.07292121023901048, -0.03918601650624506, -0.03125627561201973, -0.0934843550766668, -0.023594210465108196, -0.02597999969317067, -0.020017000305796822, -0.005965161587922803, -0.05737329124202652, 0.06335362924202796, 0.07578383914885982, -0.041611823824144176, 0.015835161576227795, 0.09077133911271248, -0.09460904713599913, 0.0014377908120232245, 0.08803958151369326, 0.014860516474131615, 0.00788967695928389, 0.0025053388709502834, 0.007998113430315448, 0.025640032539564754, -0.040026176901113604, 0.04056317791823418, 0.056259499682534124, 0.09742401558304986, 0.009706951858055207, 0.020395887234518604, 0.019670661959436633, -0.035037983809748006, 0.002519999765941212, -0.020626355202928666, 0.04572930673678075, -0.06473872606312076, -0.04737354664792938, 0.009913856283791603, -0.04472830633242284, 0.011046241938827498, 0.02869796740912622, -0.003042612945841205, 0.0987587571144104, -0.020464580832800318, 0.06264891980155822, -0.04152203231088577, 0.018774870662919937, -0.006788709396195989, -0.13945069362319285, 0.02279495197768894, 0.039360758037336414, 0.009859532418270265, 0.07632990421787385, 0.0943795822320446, 0.01125033842700143, 0.01013217719587227, 0.034505306893298705, -0.04455298335561829]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(smiles_data)"
+      ],
+      "metadata": {
+        "id": "-hqK-nIzitOm",
+        "outputId": "fc3cf279-bdff-4c2f-e546-bc676686d532",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "BKGunvnJ59xf"
+        "id": "K-bd4-vbjFoj"
       },
       "execution_count": null,
       "outputs": []
