--- a/Precily.ipynb
+++ b/Precily.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/Seung-heon-Baek/Precily/blob/main/Precily.ipynb",
-      "authorship_tag": "ABX9TyPVqXAPaBDpZsBe/pvA1SMR",
+      "authorship_tag": "ABX9TyOgTx4+A7C26+aM9WhIuUiG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5301,7 +5301,7 @@
       "cell_type": "code",
       "source": [
         "test = pd.read_csv(\"/content/Precily/Fig1/Fig1c/Fig1c_Precily_pathways/Test_Set.csv\", sep=\",\")\n",
-        "# '0'열 : 세포주명, '1'열 : 약물명, '2~1330' : 세포주 pathwat feature (1329), '1331~1430' : 약물 feature(100), '1431'열 : IC50\n",
+        "# '0'열 : 세포주명, '1'열 : 약물명, '2~1330' : 세포주 pathwat feature (1329), '1331~1430' : 약물 feature(100), '1431'열 : lnIC50\n",
         "print(test.head())"
       ],
       "metadata": {
@@ -6470,11 +6470,11 @@
         "!git clone https://github.com/hkmztrk/SMILESVecProteinRepresentation.git"
       ],
       "metadata": {
-        "id": "8IOOxtGCgF6i",
-        "outputId": "129e8563-8512-4c3d-9a03-1b721cebc832",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8IOOxtGCgF6i",
+        "outputId": "129e8563-8512-4c3d-9a03-1b721cebc832"
       },
       "execution_count": 1,
       "outputs": [
@@ -6500,10 +6500,10 @@
       ],
       "metadata": {
         "id": "BKGunvnJ59xf",
-        "outputId": "257d87fe-a68e-484c-fea2-d645dd932ab4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "257d87fe-a68e-484c-fea2-d645dd932ab4"
       },
       "execution_count": 17,
       "outputs": [
@@ -6532,11 +6532,11 @@
         "print(\"smiles.vec 파일 로드 성공:\", smiles_data)"
       ],
       "metadata": {
-        "id": "WpVG6Fdwhqzr",
-        "outputId": "e4b3457d-923a-426f-eff8-7c3a4ce7a9df",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WpVG6Fdwhqzr",
+        "outputId": "e4b3457d-923a-426f-eff8-7c3a4ce7a9df"
       },
       "execution_count": 18,
       "outputs": [
@@ -6555,11 +6555,11 @@
         "len(smiles_data)"
       ],
       "metadata": {
-        "id": "-hqK-nIzitOm",
-        "outputId": "fc3cf279-bdff-4c2f-e546-bc676686d532",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-hqK-nIzitOm",
+        "outputId": "fc3cf279-bdff-4c2f-e546-bc676686d532"
       },
       "execution_count": 19,
       "outputs": [
