--- a/Precily.ipynb
+++ b/Precily.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/Seung-heon-Baek/Precily/blob/main/Precily.ipynb",
-      "authorship_tag": "ABX9TyPty23eMZuLMNGCxa6NEHqW",
+      "authorship_tag": "ABX9TyPNmmeo7BalvlpV3sGGdItp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,9 +38,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9ko5VDMgstOI",
-        "outputId": "91fbcfc4-e52a-40ed-db06-ee48096c19cd"
+        "outputId": "1d18819d-59e8-423e-b3fe-c6af989f05bc"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -51,7 +51,7 @@
             "remote: Counting objects: 100% (93/93), done.\u001b[K\n",
             "remote: Compressing objects: 100% (60/60), done.\u001b[K\n",
             "remote: Total 1243 (delta 32), reused 89 (delta 30), pack-reused 1150 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (1243/1243), 1.68 GiB | 24.35 MiB/s, done.\n",
+            "Receiving objects: 100% (1243/1243), 1.68 GiB | 30.15 MiB/s, done.\n",
             "Resolving deltas: 100% (540/540), done.\n",
             "Updating files: 100% (259/259), done.\n"
           ]
@@ -225,7 +225,7 @@
         "outputId": "2c96f64f-2ac9-46d6-d747-8bce1076a984",
         "collapsed": true
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "metadata": {
@@ -5262,7 +5262,7 @@
         "id": "sCvNvR8csezA",
         "outputId": "10cf58a2-e200-44ab-d855-8185a4437800"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5287,7 +5287,7 @@
         "id": "JoEgTqbsoTaB",
         "collapsed": true
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5366,7 +5366,7 @@
         },
         "collapsed": true
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5412,7 +5412,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5459,7 +5459,7 @@
         "id": "khypb9RUx7n_",
         "outputId": "da9ac8a6-10da-4d55-9726-0bbea218ddce"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5482,7 +5482,7 @@
         "id": "UYahp75F5fIh",
         "outputId": "968213f2-f089-4304-ec82-7e9d00e55a9a"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5504,7 +5504,7 @@
       "metadata": {
         "id": "2iPRXsu-zdZw"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5523,7 +5523,7 @@
         "id": "U3ySJF7Jzfsz",
         "outputId": "6110b07e-fbfe-40a3-d976-75c77c9272ca"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5578,7 +5578,7 @@
         "id": "OS0DKZEJ2zwV",
         "outputId": "9b4778dc-3352-4be1-85b6-a08396ac8cc0"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5606,7 +5606,7 @@
         "id": "n77YB7iN39DI",
         "outputId": "d4affc5d-745f-4be0-86cf-857bb8260845"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5630,7 +5630,7 @@
         "id": "_fcRgXUOc7pP",
         "outputId": "aecad021-450a-411a-ff08-401cc66cd20f"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5684,7 +5684,7 @@
       "metadata": {
         "id": "vGKqBXa34Q4i"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5699,7 +5699,7 @@
         "id": "QHnlXIxW4SH2",
         "outputId": "9c2f850f-0d48-4744-a2a5-76baa31b7f7e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5724,7 +5724,7 @@
         "id": "GaoMYmbj4VQ4",
         "outputId": "8bb47391-ee0d-4112-996d-e0d18ecbea70"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5861,6 +5861,37 @@
       "source": [],
       "metadata": {
         "id": "K-bd4-vbjFoj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XidJYYAjcovM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Fig1c_Precily_pathways\n",
+        "- Precily_pathways.py - Vale data를 추가한 training data로 재학습\n",
+        "- Vale data - 175개 data 중 GSVA 가능(precily에서 gene expression data 제공) - 126개\n",
+        "- 1000 nM 제거 - 51개\n",
+        "- 그 중 홀수번 데이터 지우고 vale training data 생성"
+      ],
+      "metadata": {
+        "id": "UbTilEyecrc7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BOSvowtCcsH-"
       },
       "execution_count": null,
       "outputs": []
